Fix resize overflow rendering and simplify CSS.

--- a/blocks/sketch/editor.scss
+++ b/blocks/sketch/editor.scss
@@ -1,18 +1,4 @@
 .wp-block-a8c-sketch {
-	width: 100%;
-	height: 100%;
-	position: relative;
-
-	svg {
-		position: absolute;
-		top: 0;
-		left: 0;
-		width: 100%;
-		height: 100%;
-		touch-action: none;
-		overflow: hidden;
-	}
-
 	&__brush-style-popover {
 		.components-dropdown-menu__menu
 			.components-dropdown-menu__menu-item.is-active
